[package]
name = "chatgpt-panic-hook"
version = "0.1.5"
edition = "2024"
rust-version = "1.86"
description = "A panic hook that asks ChatGPT what went wrong"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/chatgpt-panic-hook"
repository = "https://github.com/joshka/chatgpt-panic-hook"
keywords = ["chatgpt", "panic", "hook", "debugging"]
categories = ["development-tools::debugging"]
exclude = [".github/", "release-plz.toml"]

[dependencies]
url = "2"
webbrowser = { version = "1", features = ["hardened"] }
